<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorToreaBay"
    tools:context="asiantech.internship.summer.activity_fragment.fragments.SignUpFragment">

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/field_border"
        android:hint="@string/email_hint"
        android:inputType="text|textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/field_border"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/edtRepeatPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/field_border"
        android:hint="@string/password_repeat_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtRepeatPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorAmaranth" />
</RelativeLayout>
