<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorToreaBay"
    tools:context="asiantech.internship.summer.file_storage.share_preference.SharePreferenceActivity">

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/field_border"
        android:hint="@string/email_hint"
        android:inputType="text|textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/colorDesertStorm"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/field_border"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorDesertStorm"
        android:textSize="14dp" />

    <CheckBox
        android:id="@+id/chkRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edtPassword"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@id/chkRemember"
        android:text="@string/remember"
        android:textColor="@color/colorDesertStorm"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/log_in"
        android:textColor="@color/colorDesertStorm"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorDesertStorm"
        android:textSize="30sp" />
</RelativeLayout>
