<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp"
    tools:context="asiantech.internship.summer.unittest.UnitTestActivity">

    <TextView
        android:id="@+id/tvNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_round_rect_red"
        android:padding="10dp"
        android:textSize="15dp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edt"
        android:padding="10dp"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edt"
        android:padding="10dp"
        android:textSize="15dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_round_rect_fill_green"
            android:text="@string/action_log_in"
            android:textColor="@color/colorDesertStorm" />

        <TextView
            android:id="@+id/tvInstructorLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btt_login"
            android:layout_marginTop="10dp"
            android:text="@string/instruction_social_log_in"
            android:textSize="16dp" />

        <ImageButton
            android:id="@+id/btt_ggLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvInstructorLogin"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_round_rect_fill_orange"
            android:paddingBottom="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="0dp"
            android:src="@drawable/ic_ggplus" />

        <ImageButton
            android:id="@+id/btt_fbLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvInstructorLogin"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/btt_ggLogin"
            android:background="@drawable/bg_round_rect_fill_blue"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="15dp"
            android:src="@drawable/ic_fb" />

        <TextView
            android:id="@+id/tvInstructorSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btt_ggLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/instruction_sign_up"
            android:textColor="@color/colorShamrock"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvInstructorSignUp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/instruction_forget_pass"
            android:textColor="@color/colorShamrock"
            android:textSize="16dp" />

    </RelativeLayout>


</LinearLayout>
